--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,87 @@
-.navbar{
-    background-color: #001b2a !important;
+body, html {
+    height: 100%;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
-.navbar .navbar-nav li a {
+.navbar{
+    /* background-color:rgba(21, 31, 33, 0.2); */
+    background-color: #001b2a;
+    border-bottom: 1px solid #efefef;
+    font-family: 'Alegreya Sans SC', sans-serif;
+}
+
+.navbar .navbar-nav .nav-link {
     color: goldenrod !important;
 }
 
-.navbar-toggler-icon{
-    color: #efefef;
+.navbar .navbar-nav .nav-link:hover {
+    color: #fff !important;
 }
+
+.navbar-toggler-icon{
+    color: goldenrod;
+}
+
+
+/* HEADER */
+
+#header {
+    background-image:url('../images/house-front-fullHD.jpg');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;   
+    height: 100%;
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+#header img {
+    padding: 0 0 20px 0;
+    width: 80%;
+}
+
+#header .header-right {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 30px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-top: 85px;
+}
+
+.header-left {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin-top: 85px;
+}
+
+#header .fa {
+    margin: 10% 0;
+}
+
+
 
 .navbar .nav-item .dropdown-menu .dropdown-item {
     color: goldenrod !important;
 }
 
-body {
+/* body {
     background-image:url('../images/house-front-fullHD.jpg');
     height: 100%;
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover; 
     
-}
+} */
 
-h3, h2, p {
+/* h3, h2, p {
     text-align: center;
 }
 
 /* Contact */
 
-#contact{
+/* #contact{
     padding: 5rem 0;
     position: center;
-}
+} */ 
